﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.32) stable; urgency=low

  * osconf: no more OpsiServiceConfigs: in log

-- Detlef Oertel <d.oertel@uib.de>  Thu, 25 10 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.31) stable; urgency=low

  * new paths for Linux:
     osconf: opsiscriptconfinit = '/etc/opsi-script/opsi-script.conf';
     osbatchgui: skindirectoryDefault = '/usr/share/opsi-script/skin';
     osbatchgui: skindirectoryCustomWin = '/usr/share/opsi-script/customskin';
     osparser: // search in /usr/share/opsi-script/lib
     osparser: '%opsiLogDir%' = '/var/log/opsi-script'
     oslog: StandardLogPath := '/var/log/opsi-script/';
  * osencoding: do not write out supported encodings; fixes #3700

-- Detlef Oertel <d.oertel@uib.de>  Wed, 17 10 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.30) stable; urgency=low

  * osparser: fix for close log file after script finished:
     (only in interactive mode)
  * oslog: all loglines trimright; fixes #3708

-- Detlef Oertel <d.oertel@uib.de>  Mon, 15 10 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.29) stable; urgency=low

  * osparser: doRegitryHack*: remove HKCU on flag_all_usrclass

-- Detlef Oertel <d.oertel@uib.de>  Tue, 25 Sep 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.28) stable; urgency=low

  * osconf: (fix): get ScriptErrorMessages, AutoActivityDisplay
  * osparser: move log message 'line is starting with' to log_prog
  * osinteractivegui: radiobutton 'NewFile' visible
  * osinteractivegui: at execute viewlist: use CreateTheLogfile
  * osinteractivegui: at execute_button: use CreateTheLogfile
  * osparser: close log file after script finished
  * switch to lazarus 1.8.4.

-- Detlef Oertel <d.oertel@uib.de>  Fri, 14 Sep 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.27) stable; urgency=low
